[package]
name = "esp32-tokio-demo"
version = "0.0.0"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
esp-idf-svc = { version = "0.46.0", features = ["experimental"] }
esp-idf-hal = "0.41.2"
embedded-svc = { version = "0.25.3", features = ["experimental"] }
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
tokio = { version = "*", features = ["rt", "net", "io-util"] }
mio = { version = "0.8.8", features = ["log"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
